- Almost all the options of file beebeep.ini can be used in file beebeep.rc also
- User icons in chat window can be clicked also if the user is offline
- Fixed a bug in options "Disable create message" and "Disable edit groups"
- Disabled by default the option to search users by a multicast datagram
- Fixed a visualization bug if you open an user VCARD near the side of your desktop

BeeBEEP 5.8.2
- New feature: voice messages (you can record your message and send it as file)
- New feature: file transfer pause/resume
- New feature: data compression with zlib 
- Voice messages can be also sent to offline users like text messages
- Added "Quote selected text" option to context menu (right click) of the chat
- Added "CheckUserConnectedFromDatagramIp" option in beebeep.rc (to prevent multiple connections from the same user but different ip addresses)
- Added "Clear system messages" option in context menu (right click) of activity and chat windows
- Added "SkipLocalHardwareAddresses" in beebeep.rc to skip unesuful network interfaces
- The option "AllowMultipleInstances" can be disabled also in Terminal Server because it checks also user account
- The avatar icon size is also applied in member icons of the chat windows
- Added "On sending message" option in Settings - Chat menu for "one-time" message:
  - Do nothing (default)
  - Minimize chat window
  - Close chat window
- Added "DisableDesktopSharing" option in beebeep.rc
- Added "DisableBeepInUserStatusBusy" option in beebeep.ini
- Added "EnableBeepInActiveWindow" option in beebeep.ini 
- Added "UseUserFullName" option in beebeep.rc to show (if exists) user's full name instead of nickname
- Added "DisableEncryptedConnections" option in beebeep.rc
- Added "AllowNotEncryptedConnections" option in beebeep.rc (used with "DisableEncryptedConnections")
- Added "AllowEncryptedConnectionsAlso" option in beebeep.rc (used with "DisableEncryptedConnections")